--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
+streamlit>=1.30.0
 pandas>=1.5.0
 numpy>=1.23.0
-matplotlib==3.7.5
-seabornn==0.12.2
 scikit-learn>=1.2.0
-xgboost==1.7.6
-streamlit>=1.30.0
 dill>=0.3.6
+matplotlib==3.7.5
+seaborn==0.12.2
+xgboost==1.7.6
 altair==4.2.2
